@@ -110,7 +110,7 @@ public class MemberInfoServiceImpl extends ServiceImpl<MemberInfoMapper, MemberI
     @Resource
     private ConfigEnvironmentService configEnvironmentService;
     @Resource
-    private MemberInfoMapper  memberInfoMapper;
+    private MemberInfoMapper         memberInfoMapper;
 
     @Value( "${im.tokenUrl:null}" )
     private String getImTokenUrl;
@@ -562,7 +562,8 @@ public class MemberInfoServiceImpl extends ServiceImpl<MemberInfoMapper, MemberI
         MemberInfo m = new MemberInfo();
         m.setHeadImg( String.valueOf( RandomUtils.randomIntWithMax( 1, 14 ) ) );
         m.setId( makeMemberCode() );
-        if ( StringUtils.isNotBlank( mobileLogin.getInviterCode() ) && StringUtils.isAlphanumeric( mobileLogin.getInviterCode() ) ) {
+        if ( StringUtils.isNotBlank( mobileLogin.getInviterCode() )
+                && StringUtils.isAlphanumeric( mobileLogin.getInviterCode() ) ) {
             try {
                 m.setInviterCode( mobileLogin.getInviterCode() );
             } catch ( Exception e ) {
@@ -846,13 +847,15 @@ public class MemberInfoServiceImpl extends ServiceImpl<MemberInfoMapper, MemberI
         memberCard1.setBankAccount( member.getBankAccount() );
         memberCard1.setMemberId( member.getMemberId() );
 
-        List<MemberCard> memberCardList = memberCardMapper.findAllByBankAccount( member );
+        List<MemberCard> memberCardList = new QueryChainWrapper<>( memberCardMapper )
+                .eq( "bank_account", member.getBankAccount() ).list();
+
         List<MemberCard> memberCardListFiltered = memberCardList.stream()
-                .filter((mc) ->
-                        !mc.getId().equals(member.getId()) && mc.getBankAccount().equals(member.getBankAccount()))
-                .collect(Collectors.toList());
-        if (!memberCardListFiltered.isEmpty() && memberCardListFiltered.get(0) != null) {
-            return RspBase.businessError( "卡已绑定帐号" + memberCardListFiltered.get(0).getMemberId());
+                                                                .filter( ( mc ) -> !mc.getId().equals( member.getId() )
+                                                                        && mc.getBankAccount().equals( member.getBankAccount() ) )
+                                                                .toList();
+        if ( !memberCardListFiltered.isEmpty() && memberCardListFiltered.get( 0 ) != null ) {
+            return RspBase.businessError( "卡已绑定帐号" + memberCardListFiltered.get( 0 ).getMemberId() );
         }
 
         MemberCard memberCard = memberCardMapper.selectById( id );
@@ -898,7 +901,7 @@ public class MemberInfoServiceImpl extends ServiceImpl<MemberInfoMapper, MemberI
         resultSet.add( ImmutableMap.of( "memberId", memberId ) );
 
         Map<String, Object> resultMap = resultSet.stream().map( Map::entrySet ).flatMap( Set::stream )
-                .collect( Collectors.toMap( Map.Entry::getKey, Map.Entry::getValue ) );
+                                                 .collect( Collectors.toMap( Map.Entry::getKey, Map.Entry::getValue ) );
 
         List<Map> mapList = this.baseMapper.personalGameData( startTime, endTime, memberId, memberId.substring(
                 memberId.length() - 1 ) );
@@ -952,7 +955,7 @@ public class MemberInfoServiceImpl extends ServiceImpl<MemberInfoMapper, MemberI
                 Map loginUserMap = redisUtils.hGetAll( Constants.MEMBER_LOGIN_TOKEN + token );
                 if ( !CollectionUtils.isEmpty( loginUserMap ) ) {
                     PlatformUser platformUser = JsonUtil.json2Object( loginUserMap.getOrDefault( "platformUserStr", "" )
-                            .toString(), PlatformUser.class );
+                                                                                  .toString(), PlatformUser.class );
                     platformUser.setVip( vip );
                     platformUser.setNickName( nickName );
                     loginUserMap.put( "platformUserStr", JsonUtil.object2Json( platformUser ) );
@@ -992,9 +995,9 @@ public class MemberInfoServiceImpl extends ServiceImpl<MemberInfoMapper, MemberI
     @Override
     public RspBase<RspMoney> boxAccount( String memberId, ReqBoxPass boxPass ) {
         MemberInfo memberInfo = new QueryChainWrapper<>( this.baseMapper ).eq( "id", memberId )
-                .select( "id", "box_account", "account_now",
-                        "box_pass" )
-                .one();
+                                                                          .select( "id", "box_account", "account_now",
+                                                                                  "box_pass" )
+                                                                          .one();
         if ( memberInfo == null ) {
             return RspBase.businessError( "会员不存在" );
         }
@@ -1018,7 +1021,7 @@ public class MemberInfoServiceImpl extends ServiceImpl<MemberInfoMapper, MemberI
             return RspBase.businessError( "处理中请稍后" );
         }
         MemberInfo memberInfo = new QueryChainWrapper<>( this.baseMapper ).eq( "id", memberId )
-                .select( "id", "box_account", "account_now" ).one();
+                                                                          .select( "id", "box_account", "account_now" ).one();
         BigDecimal boxAccount = memberInfo.getBoxAccount();
         BigDecimal accountNow = memberInfo.getAccountNow();
         boolean    flag       = false;
@@ -1034,7 +1037,7 @@ public class MemberInfoServiceImpl extends ServiceImpl<MemberInfoMapper, MemberI
         }
         SpringUtils.getBean( MemberInfoService.class ).updateSafeBox( memberInfo, addAccount, flag );
         MemberInfo newInfo = new QueryChainWrapper<>( this.baseMapper ).eq( "id", memberId )
-                .select( "id", "box_account", "account_now" ).one();
+                                                                       .select( "id", "box_account", "account_now" ).one();
         RspMoney money = new RspMoney();
         money.setBoxAccount( newInfo.getBoxAccount() );
         money.setAccountNow( newInfo.getAccountNow() );
@@ -1071,7 +1074,7 @@ public class MemberInfoServiceImpl extends ServiceImpl<MemberInfoMapper, MemberI
         BeanUtils.copyProperties( memberInfo, rspMember );
 
         List<ConfigVip> configVips = configVipCacheUtils.getConfigVipMap().values().stream()
-                .sorted( Comparator.comparing( ConfigVip::getBcode ) ).toList();
+                                                        .sorted( Comparator.comparing( ConfigVip::getBcode ) ).toList();
         Integer vip = 1;
         for ( ConfigVip configVip : configVips ) {
             if ( memberInfo.getCodeTotal().compareTo( configVip.getBcode() ) < 0 ) {
@@ -1089,7 +1092,7 @@ public class MemberInfoServiceImpl extends ServiceImpl<MemberInfoMapper, MemberI
                 if ( StringUtils.isNotBlank( token ) && redisUtils.exists( Constants.MEMBER_LOGIN_TOKEN + token ) ) {
                     Map loginUserMap = redisUtils.hGetAll( Constants.MEMBER_LOGIN_TOKEN + token );
                     PlatformUser platformUser = JsonUtil.json2Object( loginUserMap.getOrDefault( "platformUserStr", "" )
-                            .toString(), PlatformUser.class );
+                                                                                  .toString(), PlatformUser.class );
                     platformUser.setVip( vip );
                     loginUserMap.put( "platformUserStr", JsonUtil.object2Json( platformUser ) );
                     redisUtils.hMSet( Constants.MEMBER_LOGIN_TOKEN + token, loginUserMap );
@@ -1267,13 +1270,13 @@ public class MemberInfoServiceImpl extends ServiceImpl<MemberInfoMapper, MemberI
         try {
             token = restTemplate.execute( this.getImTokenUrl, HttpMethod.POST, restTemplate.httpEntityCallback( httpEntity ),
                     response -> {
-                        InputStream bodyStream = response.getBody();
-                        String      text;
-                        try ( Reader reader = new InputStreamReader( bodyStream ) ) {
-                            text = IOUtils.toString( reader );
-                        }
-                        return text;
-                    } );
+                InputStream bodyStream = response.getBody();
+                String      text;
+                try ( Reader reader = new InputStreamReader( bodyStream ) ) {
+                    text = IOUtils.toString( reader );
+                }
+                return text;
+            } );
         } catch ( Exception e ) {
             log.error( e.getMessage(), e );
         }
@@ -1411,7 +1414,7 @@ public class MemberInfoServiceImpl extends ServiceImpl<MemberInfoMapper, MemberI
     @Override
     public RspBase<?> bindInviterCode( ReqMemberRecommend reqMemberRecommend, String memberId ) {
         MemberInfo memberInfo = new QueryChainWrapper<>( this.baseMapper ).eq( "id", memberId ).select( "id", "inviter_code" )
-                .one();
+                                                                          .one();
         if ( memberInfo == null ) {
             return RspBase.businessError( "会员不存在" );
         }
@@ -1433,95 +1436,94 @@ public class MemberInfoServiceImpl extends ServiceImpl<MemberInfoMapper, MemberI
     }
 
     @Override
-    public RspBase updatePhones(ReqSmallFeatures req) {
-        if (org.springframework.util.StringUtils.hasText(req.getPhones()) && org.springframework.util.StringUtils.hasText(req.getPassword())) {
-            if (req.getPhones().contains("\n")) {
+    public RspBase updatePhones( ReqSmallFeatures req ) {
+        if ( org.springframework.util.StringUtils.hasText( req.getPhones() )
+                && org.springframework.util.StringUtils.hasText( req.getPassword() ) ) {
+            if ( req.getPhones().contains( "\n" ) ) {
                 try {
-                    String[] phones = req.getPhones().split("\n");
-                    StringBuilder phone = new StringBuilder();
-                    for (int i = 0; i < phones.length; i++) {
-                        phone.append("\"").append(phones[i]).append("\"").append(",");
+                    String[]      phones = req.getPhones().split( "\n" );
+                    StringBuilder phone  = new StringBuilder();
+                    for ( int i = 0; i < phones.length; i++ ) {
+                        phone.append( "\"" ).append( phones[ i ] ).append( "\"" ).append( "," );
                     }
-                    phone = new StringBuilder(phone.substring(0, phone.length() - 1));
-                    req.setPhones(phone.toString());
-                } catch (Exception e) {
-                    return RspBase.businessError("分割手机号出错,请检查格式");
+                    phone = new StringBuilder( phone.substring( 0, phone.length() - 1 ) );
+                    req.setPhones( phone.toString() );
+                } catch ( Exception e ) {
+                    return RspBase.businessError( "分割手机号出错,请检查格式" );
                 }
             } else {
-                req.setPhones("\"" + req.getPhones() + "\"");
+                req.setPhones( "\"" + req.getPhones() + "\"" );
             }
-            memberInfoMapper.updatePhones(req);
+            memberInfoMapper.updatePhones( req );
             return RspBase.ok();
         }
-        return RspBase.businessError("请输入批量手机号和密码");
+        return RspBase.businessError( "请输入批量手机号和密码" );
     }
 
     @Override
-    public RspBase<?> queryPhones(ReqSmallFeatures req) {
-        if (org.springframework.util.StringUtils.hasText(req.getUserIds())) {
-            if (req.getUserIds().contains("\n")) {
+    public RspBase<?> queryPhones( ReqSmallFeatures req ) {
+        if ( org.springframework.util.StringUtils.hasText( req.getUserIds() ) ) {
+            if ( req.getUserIds().contains( "\n" ) ) {
                 try {
-                    String[] userIds = req.getUserIds().split("\n");
-                    StringBuilder userId = new StringBuilder();
-                    for (int i = 0; i < userIds.length; i++) {
-                        userId.append("\"").append(userIds[i]).append("\"").append(",");
+                    String[]      userIds = req.getUserIds().split( "\n" );
+                    StringBuilder userId  = new StringBuilder();
+                    for ( int i = 0; i < userIds.length; i++ ) {
+                        userId.append( "\"" ).append( userIds[ i ] ).append( "\"" ).append( "," );
                     }
-                    userId = new StringBuilder(userId.substring(0, userId.length() - 1));
-                    req.setUserIds(userId.toString());
-                } catch (Exception e) {
-                    return RspBase.businessError("分割会员ID出错,请检查格式");
+                    userId = new StringBuilder( userId.substring( 0, userId.length() - 1 ) );
+                    req.setUserIds( userId.toString() );
+                } catch ( Exception e ) {
+                    return RspBase.businessError( "分割会员ID出错,请检查格式" );
                 }
             } else {
-                req.setUserIds("\"" + req.getUserIds() + "\"");
+                req.setUserIds( "\"" + req.getUserIds() + "\"" );
             }
-            List<ReqSmallFeatures> phonesAndUserId = memberInfoMapper.queryPhones(req);
-            List<String> phonesByIds = new ArrayList<>();
-            for (ReqSmallFeatures ph : phonesAndUserId) {
-                phonesByIds.add(ph.getUserIds() + ":" + ph.getPhonesByIds());
+            List<ReqSmallFeatures> phonesAndUserId = memberInfoMapper.queryPhones( req );
+            List<String>           phonesByIds     = new ArrayList<>();
+            for ( ReqSmallFeatures ph : phonesAndUserId ) {
+                phonesByIds.add( ph.getUserIds() + ":" + ph.getPhonesByIds() );
             }
-            return RspBase.ok(phonesByIds);
+            return RspBase.ok( phonesByIds );
         }
-        return RspBase.businessError("请输入批量会员ID");
+        return RspBase.businessError( "请输入批量会员ID" );
     }
 
     @Override
-    @Transactional(rollbackFor = Exception.class)
-    public RspBase<?> commitMoney(ReqSmallFeatures req) {
-        if (org.springframework.util.StringUtils.hasText(req.getMemberIds())) {
+    @Transactional( rollbackFor = Exception.class )
+    public RspBase<?> commitMoney( ReqSmallFeatures req ) {
+        if ( org.springframework.util.StringUtils.hasText( req.getMemberIds() ) ) {
             String[] userIds = null;
-            if (req.getMemberIds().contains("\n")) {
+            if ( req.getMemberIds().contains( "\n" ) ) {
                 try {
-                    userIds = req.getMemberIds().split("\n");
+                    userIds = req.getMemberIds().split( "\n" );
                     StringBuilder userId = new StringBuilder();
-                    for (int i = 0; i < userIds.length; i++) {
-                        userId.append("\"").append(userIds[i]).append("\"")
-                                .append(",").append(req.getMoney())
-                                .append(",").append(req.getMoney())
-                                .append("),(");
+                    for ( int i = 0; i < userIds.length; i++ ) {
+                        userId.append( "\"" ).append( userIds[ i ] ).append( "\"" ).append( "," ).append( req.getMoney() )
+                              .append( "," ).append( req.getMoney() ).append( "),(" );
                     }
-                    userId = new StringBuilder(userId.substring(0, userId.length() - 3));
-                    req.setUserIds(userId.toString());
-                } catch (Exception e) {
-                    return RspBase.businessError("分割会员ID出错,请检查格式");
+                    userId = new StringBuilder( userId.substring( 0, userId.length() - 3 ) );
+                    req.setUserIds( userId.toString() );
+                } catch ( Exception e ) {
+                    return RspBase.businessError( "分割会员ID出错,请检查格式" );
                 }
             } else {
-                req.setUserIds("\"" + req.getMemberIds() + "\"" + "," + req.getMoney() + "," + req.getMoney());
+                req.setUserIds( "\"" + req.getMemberIds() + "\"" + "," + req.getMoney() + "," + req.getMoney() );
             }
             //清除表中数据
             memberInfoMapper.clear();
-            memberInfoMapper.insertPaiSong(req.getUserIds());
+            memberInfoMapper.insertPaiSong( req.getUserIds() );
             return RspBase.ok();
         }
-        return RspBase.businessError("请输入批量会员ID");
+        return RspBase.businessError( "请输入批量会员ID" );
     }
 
     @Override
-    public RspBase<?> insertPaiSong(String userIds) {
-        if (org.springframework.util.StringUtils.hasText(userIds)) {
-            memberInfoMapper.insertPaiSong(userIds);
+    public RspBase<?> insertPaiSong( String userIds ) {
+        if ( org.springframework.util.StringUtils.hasText( userIds ) ) {
+            memberInfoMapper.insertPaiSong( userIds );
             return RspBase.ok();
         }
-        return RspBase.businessError("请输入批量会员ID");
+        return RspBase.businessError( "请输入批量会员ID" );
     }
 
     @Override
@@ -1531,9 +1533,9 @@ public class MemberInfoServiceImpl extends ServiceImpl<MemberInfoMapper, MemberI
     }
 
     @Override
-    public void sendMsg(String msg, String memberId) {
-        MemberInfo memberInfo = memberInfoMapper.selectMemberInfoById(memberId);
-        String phone = memberInfo.getPhone();
-        smsApi.sendMemSms(phone,msg);
+    public void sendMsg( String msg, String memberId ) {
+        MemberInfo memberInfo = memberInfoMapper.selectMemberInfoById( memberId );
+        String     phone      = memberInfo.getPhone();
+        smsApi.sendMemSms( phone, msg );
     }
 }
